[gd_scene load_steps=3 format=3 uid="uid://dpytvh3risiay"]

[ext_resource type="Script" path="res://Menu Scripts/WarMenu.gd" id="1_lg0pp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwtt7"]
bg_color = Color(0.414273, 0.150836, 0.54012, 1)

[node name="WarMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lg0pp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1157.0
offset_bottom = 654.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uwtt7")

[node name="SurrenderButton" type="Button" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 263.0
offset_right = 969.0
offset_bottom = 296.0
text = "Surrender"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_right = 59.0
offset_bottom = 42.0
text = "<"

[node name="SurrenderEffectsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 749.0
offset_top = 330.0
offset_right = 1079.0
offset_bottom = 583.0

[node name="WarDescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 311.0
offset_right = 414.0
offset_bottom = 620.0

[node name="EasyWar" type="Button" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 436.0
offset_right = 286.0
offset_bottom = 492.0
text = "Declare Easy War"

[node name="MediumWar" type="Button" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 443.0
offset_right = 664.0
offset_bottom = 500.0
text = "Declare Average War"

[node name="HardWar" type="Button" parent="."]
layout_mode = 0
offset_left = 830.0
offset_top = 438.0
offset_right = 971.0
offset_bottom = 490.0
text = "Declare Tough War"

[node name="EasyLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 108.0
offset_top = 509.0
offset_right = 328.0
offset_bottom = 608.0
text = "A society with a ruling class of wise old people. Pathetic fighters."
autowrap_mode = 2

[node name="MediumLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 515.0
offset_right = 719.0
offset_bottom = 622.0
text = "A nation ruled by the poor. Illequiped but fierce despite."
autowrap_mode = 2

[node name="HardLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 792.0
offset_top = 503.0
offset_right = 1037.0
offset_bottom = 587.0
text = "A society of Amazon warriors. Their passtimes are battle, death and slaves in that order."
autowrap_mode = 2

[connection signal="pressed" from="SurrenderButton" to="." method="_on_surrender_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="EasyWar" to="." method="_on_easy_war_pressed"]
[connection signal="pressed" from="MediumWar" to="." method="_on_medium_war_pressed"]
[connection signal="pressed" from="HardWar" to="." method="_on_hard_war_pressed"]
